[package]
name = "csfloat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusty-money = { version = "0.4.0", features = ["iso", "crypto"] }